--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.3"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.12"
 	}
 }
