--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"vite": "^6.0.3"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-node": "^5.2.12"
+		"@sveltejs/adapter-node": "^5.2.12",
+		"lineicons": "^1.3.2"
 	}
 }
