--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sabercards",
-	"version": "0.7.2",
+	"version": "0.7.3",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/node": "^22.14.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
@@ -21,6 +22,8 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-node": "^5.2.12",
-		"lineicons": "^1.3.2"
+		"fs": "^0.0.1-security",
+		"lineicons": "^1.3.2",
+		"url": "^0.11.4"
 	}
 }
