--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sabercards",
-	"version": "0.7.4",
+	"version": "0.7.5",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -24,6 +24,7 @@
 		"@sveltejs/adapter-node": "^5.2.12",
 		"fs": "^0.0.1-security",
 		"lineicons": "^1.3.2",
+		"path": "^0.12.7",
 		"url": "^0.11.4"
 	}
 }
